# TrainingTrackerApi

./: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 1846f948e23b_002_add_username_account.py  19f7188ddd8a_001_create_table_account.py  7f86f13de1c7_003_create_exercise.py  981318f363ec_004_create_table_workout_and_workout_.py  b6ea1a476e07_create_table_account.py
api/: __init__.py
api/annotated_types/: __init__.py  account.py  base.py  exercise.py  workout.py
api/dependencies/: database_session.py
api/dependencies/services/: __init__.py  account.py  auth.py  exercise.py  workout.py
api/exception_handlers/: factory.py
api/exceptions/: __init__.py  auth.py  base.py
api/services/: account.py  auth.py  exercise.py  workout.py
api/v1/: __init__.py
api/v1/account/: __init__.py  handlers.py
api/v1/auth/: __init__.py  handlers.py
api/v1/exercise/: __init__.py  (+1 more)
app/: __init__.py  app.py
app/openapi/: __init__.py  description.py  tags.py
app/routers/: setup.py
server/: __main__.py
settings/: _base.py  app.py  database.py  jwt.py  redis.py  server.py  settings.py
src/config/: __init__.py  database.py  redis.py
src/enums/: __init__.py  jwt.py
src/exceptions/: __init__.py  auth.py  base.py
src/services/: __init__.py  account.py  auth.py  exercise.py  workout.py
src/types/: __init__.py  annotated.py  base.py  exeptions.py  pagination.py
src/utils/: datetime.py
tests/: test_auth_integration.py  test_password_manager_unit.py  test_username_validator_unit.py
(+47 files in other folders)
