[project]
name = "trainingtrackerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.121.3",
    "httptools>=0.7.1",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
]
