[project]
name = "trainingtrackerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.121.3",
    "httptools>=0.7.1",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.38.0",
    "uvloop>=0.22.1",
    "orjson>=3.11.4",
    "redis>=7.1.0",
    "pyjwt>=2.10.1",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]
